Prevent left right scroll on mobile

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body {
     color: white;
     padding-left: 10%;
     font-weight: 900;
+    width: 100%;
 }
 
 .header .nav {
